--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <p>Git + Github_1</p>
+    <p>Git + Github</p>
+    <h2>Hello</h2>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto fugiat
+      maxime itaque harum nihil. Ratione voluptates inventore voluptatibus
+      labore maxime.
+    </p>
   </body>
 </html>
